# jobops

./: .env  .gitattributes  .gitignore  .vulture_whitelist.py  LICENSE  Makefile  README.md  Vagrantfile.linux  Vagrantfile.windows  cleanup.sh  jobops.code-workspace  jobops.exe.spec  jobopsdb.session.sql  jobopsdb.sqlite3  jobopsdb.sqlite3-shm  jobopsdb.sqlite3-wal  pyproject.toml  pyven.sh  run.sh  tag.sh
.cursor/rules/: python-rules.mdc
.github/workflows/: package.yml  pyinstaller-build.yml  static.yml  uvx.yml
docs/: app.js  index.html  style.css
scripts/: db_migrate.py
src/jobops/: __init__.py  __main__.py
src/jobops/clients/: __init__.py
src/jobops/config/: __init__.py
src/jobops/models/: __init__.py
src/jobops/pipeline/: __init__.py
src/jobops/repositories/: __init__.py
src/jobops/scrapers/: __init__.py
src/jobops/services/: __init__.py
src/jobops/templates/: accenture.py  actiris.py  adecco.py  brusseljobs.py  cegeka.py  deloitte.py  dornan.py  eures.py  forem.py  glassdoor.py  hays.py  ictjobs.py  indeed.py  jobat.py  jobslu.py  linkedin.py  manpower.py  mckinsey.py  michaelpage.py  monster.py  natvacbank.py  pwcbe.py  randstad.py  referencesbe.py  roberthalf.py  stepstone.py  vdab.py
src/jobops/utils/: __init__.py
src/jobops/views/: __init__.py
src/jobops_api/: README.md  __init__.py  pyproject.toml
src/jobops_api/clients/: __init__.py
src/jobops_api/config/: __init__.py
src/jobops_api/models/: __init__.py
src/jobops_api/pipeline/: __init__.py
src/jobops_api/repositories/: __init__.py
src/jobops_api/utils/: __init__.py
src/jobops_app/: README.md  __init__.py  i18n.py  main.py  models.py  repository.py  theme.py
src/jobops_app/assets/: .keep
src/jobops_app/screens/: __init__.py  sections.py  settings.py
src/jobops_app/services/: __init__.py  groq.py  linear.py
src/jobops_app/widgets/: __init__.py  components.py
src/jobops_cli/: __init__.py
src/jobops_clipper/: README.md  TODO.md  __init__.py  build.js  manifest.json  package-lock.json  package.json  set_port.js  tsconfig.json
src/jobops_clipper/src/: background.ts  client.ts  config.ts  content.ts  database.ts  i18n.ts  integration.ts  models.ts  popup.css  popup.html  popup.ts  repository.ts
src/jobops_clipper/src/locales/: README.md  en.json  fr.json  nl.json  tr.json
src/jobops_test/: __init__.py
src/jobops_tray/: __init__.py  pyproject.toml
src/jobops_tray/clients/: __init__.py
src/jobops_tray/config/: __init__.py
src/jobops_tray/models/: __init__.py
src/jobops_tray/pipeline/: __init__.py
src/jobops_tray/utils/: __init__.py
src/jobops_tray/views/: app.py
test/jobops/pipeline/: __init__.py
