[project]
name = "jobops"
version = "0.0.1"
description = "Een krachtige Python applicatie die automatisch gepersonaliseerde motivatiebrieven genereert op basis van job descriptions van URLs, gebruikmakend van verschillende AI backends."
readme = "README.md"
authors = [
    { name = "Yilmaz Mustafa", email = "yilmaz@codesapien.net" }
]

requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "rich",
    "kivy>=2.3.0",
    "kivymd==1.1.1",
    "pydantic>=2.7",
    "requests>=2.32",
    "pystray>=0.19.5",
    "Pillow>=10.3.0",
    "reportlab>=4.0.9",
    "pymupdf>=1.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autopep8",
    "autoflake",
    "black",
    "pytest",
    "vulture"
] 

[project.scripts]
clipper = "jobops_clipper:main"
app = "jobops_app:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src/jobops_clipper",
    "src/jobops_app"
]

[tool.hatch.metadata]
allow-direct-references = true

